@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.2050 2007/09/20 08:18:57 abs Exp $
+$NetBSD: CHANGES-2007,v 1.2051 2007/09/20 10:20:12 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -3789,3 +3789,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated www/firefox-bin to 2.0.0.7 [ghen 2007-09-20]
 	Updated www/firefox-gtk1 to 2.0.0.7 [ghen 2007-09-20]
 	Updated pkgtools/pkg_chk to 1.87 [abs 2007-09-20]
+	Updated devel/cpuflags to 1.17 [abs 2007-09-20]
